# collection-service/src/main/java/soa/lab2/collection/model/SpaceMarinePatch.java
@@ -1,0 +1,5 @@
+package soa.lab2.collection.model;
+
+public record SpaceMarinePatch(Coordinates coordinates, Integer health, Weapon weaponType,
+                               MeleeWeapon meleeWeapon, boolean meleeWeaponProvided) {
+}
